docs/k8s/Automated Service Mesh with Istio/05-03/hostname-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - hostname
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - match:
    - headers:
        cookie:
          exact: user=test
    route:
    - destination:
        host: hostname
        subset: v1
      weight: 100
    mirror:
      host: hostname
      subset: v2
  - route:
    - destination:
        host: hostname
        subset: v1
